css/main.css
/* ==========================================================================
   H-SC Online Gift Form
   ========================================================================== */
/* ==========================================================================
   Global
   ========================================================================== */
body {
  background-color: #dbd7d7;
}
p {
    line-height: 150%;
}
footer {
    font-size: .7em;
    line-height: 150%;
}
img {
    max-width: 100%;
}
/* ==========================================================================
   Header
   ========================================================================== */
.navbar {
    border-bottom: 20px solid #d6d6d6;
    background: #660000;
    width: 100%;
    -webkit-box-shadow: 0 5px 10px #aaa;
    -moz-box-shadow: 0 5px 10px #aaa;
    box-shadow: 0 5px 10px #aaa;
}
.navbar-inner {
    border-bottom: 20px solid #d6d6d6;
    background: #660000;
}
/* ==========================================================================
   Top Message
   ========================================================================== */
    #topMessage h1 {
        margin-top: 2em;
        font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", Times, serif;
        font-size: 2em;
    }

/* ==========================================================================
   Main Form Container / General Form Elements
   ========================================================================== */
    .formContainer {
        background: #ececec;
        border-radius: 1em;
        padding: 2em;
    }
    .progress {
        margin: 0 auto;
        width: 50%;
    }
/* ==========================================================================
   Javascript Disabled
   ========================================================================== */
    .jsDisabled {
        display: none;
    }
/* ==========================================================================
   Step 1 — One Time Gift or Recurring Gift?
   ========================================================================== */
    .centerButtons {
        margin: 0 auto;
        width: 60%;
        max-width: 100%;
    }
/* ==========================================================================
   Giving Form Controls
   ========================================================================== */
.paginationBTN {
    border:0;
    padding:0 30px;
    height:3em;
    line-height:30px;
    text-align:center;
    font-size:.75em;
    color:#fff;
    text-shadow:#4f0000 0 1px 0;
    background:#7f0000;
    -moz-border-radius:50px;
    -webkit-border-radius:50px;
    border-radius:50px;
    margin-top: 1em;
    cursor:pointer;
    -moz-box-shadow: 0 1px 2px #999;
    -webkit-box-shadow: 0 1px 2px #999;
    max-width: 50%;
}
.paginationBTN:hover {
    border:0;
    padding:0 30px;
    height: 3em;
    line-height:30px;
    text-align:center;
    font-size:.75em;
    color:#fff;
    text-shadow:#4f0000 0 1px 0;
    background:#c69500;
    -moz-border-radius:50px;
    -webkit-border-radius:50px;
    border-radius:50px;
    cursor:pointer;
    max-width: 50%
}
.requiredValue {
    color: #ff0000;
}

/* ==========================================================================
   Media Queries
   ========================================================================== */
/* Large desktop */
@media (min-width: 1200px) {
    .centerButtons {
        margin: 0 auto;
        width: 60%;
        max-width: 100%;
    }
}

/* Portrait tablet to landscape and desktop */
@media (min-width: 768px) and (max-width: 979px) {
    .centerButtons {
        margin: 0 auto;
        width: 0%;
        max-width: 100%;
    }
}

/* Landscape phone to portrait tablet */
@media (max-width: 767px) {
    /*Remove extranious padding so our header extends across*/
    body {
        padding: 0;
    }
    /*But we want the content to not touch the edges*/
    .container {
        padding-left: 20px;
        padding-right: 20px;
    }
    .centerButtons {
        margin: 0 auto;
        width: 100%;
        max-width: 100%;
    }
}
/* Landscape phone to portrait tablet */
@media (max-width: 620px) {
    /*Remove extranious padding so our header extends across*/
    body {
        padding: 0;
    }
    /*But we want the content to not touch the edges*/
    .container {
        padding-left: 20px;
        padding-right: 20px;
    }
    .navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
        margin: 0;
    }
    .centerButtons {
        margin: 0 auto;
        width: 100%;
        max-width: 100%;
    }
}

/* Landscape phones and down */
@media (max-width: 480px) {
    .navbar-fixed-top, .navbar-fixed-bottom, .navbar-static-top {
        margin: 0;
    }
    .centerButtons {
        margin: 0 auto;
        width: 100%;
        max-width: 100%;
    }
}

